resolved spacing issue for vendor price

--- a/tgui/packages/tgui/styles/interfaces/VendingSorted.scss
+++ b/tgui/packages/tgui/styles/interfaces/VendingSorted.scss
@@ -149,6 +149,10 @@ $mandatory-color: rgb(128, 83, 0);
   margin-bottom: -6px;
 }
 
+.VendingSorted__Cost {
+  width: 30px;
+}
+
 .VendingSorted__Text {
   font-size: 14px;
   white-space: nowrap;
